test_suite/tests/ui/transparent/at_most_one.stderr
error: #[serde(transparent)] requires struct to have at most one transparent field
 --> $DIR/at_most_one.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

