test_suite/tests/ui/transparent/at_most_one.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)]
#[serde(transparent)]
struct S {
    a: u8,
    b: u8,
}

fn main() {}
